--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: MTA Handling Editor
+title: "MTA Handling Editor"
 email: ""
 description: "The only and the best official ingame handling editor for Multi Theft Auto: San Andreas."
 url: "http://deltanic.github.io/Hedit"
